%% Mermaid ER diagram — auto-generated by moai-domain-db-docs
%% Do not edit manually — changes will be overwritten on next auto-sync.
%% Last generated: 2026-04-23
erDiagram
    admin_credentials {
        uuid id PK
        varchar255 username UK
        varchar255 password_hash
        varchar20 role
        timestamptz created_at
    }

    vaults {
        uuid id PK
        text name
        uuid created_by FK
        timestamptz created_at
        timestamptz updated_at
    }

    files {
        uuid id PK
        uuid vault_id FK
        text path
        text hash
        integer size_bytes
        text content
        text file_type
        timestamptz deleted_at
        timestamptz created_at
        timestamptz updated_at
    }

    file_versions {
        uuid id PK
        uuid file_id FK
        integer version_num
        text storage_key
        text content_hash
        text content
        uuid base_version_id FK
        text merge_type
        timestamptz created_at
    }

    sync_events {
        uuid id PK
        uuid vault_id FK
        uuid file_id FK
        text event_type
        text device_id
        text from_path
        bigserial sequence
        timestamptz created_at
    }

    device_sync_state {
        text device_id PK
        uuid vault_id FK
        uuid last_event_id
        timestamptz last_sync_at
    }

    conflicts {
        uuid id PK
        uuid vault_id FK
        uuid file_id FK
        text conflict_path
        text incoming_hash
        timestamptz resolved_at
        text resolution
        timestamptz created_at
    }

    admin_credentials ||--o{ vaults : "creates"
    vaults ||--o{ files : "contains"
    vaults ||--o{ sync_events : "logs"
    vaults ||--o{ device_sync_state : "tracks"
    vaults ||--o{ conflicts : "manages"
    files ||--o{ file_versions : "versions"
    files ||--o{ sync_events : "references"
    files ||--o{ conflicts : "involved_in"
    file_versions ||--o| file_versions : "base_version"
